# now-cli

./: .editorconfig  .gitignore  LICENSE.md  Makefile  README.md  dev-requirements.txt  now.py  noxfile.py  requirements.txt  setup.cfg  setup.py
