[metadata]
name = NOW
version = file: version.txt
description = Comand line utilities for information about now
long_description = file: README.md LICENCE


[coverage:run]
omit =
    tests/*
    .git/
    .tox/*
    .nox/*
    venv/*
    __pycache__/*


[flake8]
max-complexity = 8
max-line-length = 88
exclude =
    .git,
    .tox,
    .nox,
    venv,
    __pycache__
ignore =
    I201
    W503 # not yet up to date with https://www.flake8rules.com/rules/W503.html

[sqlfluff]
dialect = bigquery
templater = jinja


[sqlfluff:rules:L010]
capitalisation_policy = lower


[tool.black]
line-length = 88
